--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
         <br>
         <div id="canvas"></div>
         <div id="game_console"></div>
+        <br>
+        <br>
+        <button class="btn btn-success" onclick="restart()">Restart</button>
+        <br>
+        <br>
+        <div id="myModal" class="modal fade">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button class="close" data-dismiss = "modal">&times;</button>
+                  <h5>Instructions</h5>
+                </div>
+
+                <div class="modal-body">
+                    <ol>
+                        <li>In the AI PING PONG game there will be 2 paddles.</li>
+                        <li>One paddle will be operated by the computer, and one paddle should be operated as per the movement of your right wrist.</li>
+                      </ol>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <h4>
+            Recreated by Chanakya
+          </h4>
     </center>
         <script src="main.js"></script>
     </body>
